Linux project stuff

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@
 *.depend
 *.layout
 *.objs*
+*.d
 source/obj
-
+examples_tests/06.MeshLoaders/bin/cow.baw
+examples_tests/06.MeshLoaders/bin/extrusionLogo_TEST_fixed.baw
+examples_tests/07.HardwareSkinning/bin/dwarf.baw
