--- a/source/Irrlicht/Makefile
+++ b/source/Irrlicht/Makefile
@@ -66,7 +66,7 @@ LINKOBJ = $(IRRMESHOBJ) $(IRROBJ) $(IRRANIMOBJ) \
 #Compiler flags
 CXXINCS = -I../../include -I../../../openssl/include -Izlib -Ijpeglib -Ilibpng -Iconvert_utf -Iutf8/source
 CPPFLAGS += $(CXXINCS) -DIRRLICHT_EXPORTS=1
-CXXFLAGS += -std=c++03 -Wall -pipe -fno-exceptions -fstrict-aliasing
+CXXFLAGS += -Wall -pipe -fno-exceptions -fstrict-aliasing
 ifndef NDEBUG
 CXXFLAGS += -g -D_DEBUG
 else
