--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -348,6 +348,8 @@
 		<Unit filename="../../include/heapsort.h" />
 		<Unit filename="../../include/irrAllocator.h" />
 		<Unit filename="../../include/irrArray.h" />
+		<Unit filename="../../include/irrBaseClasses.h" />
+		<Unit filename="../../include/irrMacros.h" />
 		<Unit filename="../../include/irrMath.h" />
 		<Unit filename="../../include/irrString.h" />
 		<Unit filename="../../include/irrTypes.h" />
