--- a/source/Irrlicht/Irrlicht10.0.vcxproj
+++ b/source/Irrlicht/Irrlicht10.0.vcxproj
@@ -949,6 +949,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='SDL-Debug|x64'">false</ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="COSOperator.h" />
+    <ClInclude Include="COverdrawMeshOptimizer.h" />
     <ClInclude Include="CSceneManager.h" />
     <ClInclude Include="CSkinnedMeshSceneNode.h" />
     <ClInclude Include="FW_Mutex.h" />
@@ -1191,6 +1192,7 @@
     </ClCompile>
     <ClCompile Include="coreutil.cpp" />
     <ClCompile Include="COSOperator.cpp" />
+    <ClCompile Include="COverdrawMeshOptimizer.cpp" />
     <ClCompile Include="CSceneManager.cpp" />
     <ClCompile Include="C3DSMeshFileLoader.cpp" />
     <ClCompile Include="CSkinnedMeshSceneNode.cpp" />
