--- a/source/Irrlicht/Irrlicht10.0.vcxproj.filters
+++ b/source/Irrlicht/Irrlicht10.0.vcxproj.filters
@@ -229,6 +229,7 @@
     <ClCompile Include="lzma\Alloc.c" />
     <ClCompile Include="lzma\LzmaLib.c" />
     <ClCompile Include="CForsythVertexCacheOptimizer.cpp" />
+    <ClCompile Include="COverdrawMeshOptimizer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\EDriverFeatures.h" />
@@ -559,6 +560,7 @@
     <ClInclude Include="lzma\Alloc.h" />
     <ClInclude Include="lzma\LzmaLib.h" />
     <ClInclude Include="..\..\include\CForsythVertexCacheOptimizer.h" />
+    <ClInclude Include="COverdrawMeshOptimizer.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="clwinlib\OpenCL.lib" />
