Added FORCE_EMPTY_BASE_OPT for MSVC which is a god-awful-compiler which used to pad our BAW Blob structs with 1 byte Fixed a small bug in verification of headers in the BAW loader
Added PACK_STRUCT on some anonymous unions.

Added compute shader dispatch functions to OpenGLExtensionHandler.

--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -242,6 +242,7 @@
 			<Add option="-D_IRR_COMPILE_WITH_OPENGL_" />
 			<Add option="-D_7ZIP_ST" />
 		</Compiler>
+		<Unit filename="../../include/CBAWFile.h" />
 		<Unit filename="../../include/CFinalBoneHierarchy.h" />
 		<Unit filename="../../include/CImageData.h" />
 		<Unit filename="../../include/COpenGLStateManager.h" />
@@ -382,7 +383,6 @@
 		<Unit filename="CBAWMeshFileLoader.h" />
 		<Unit filename="CBAWMeshWriter.cpp" />
 		<Unit filename="CBAWMeshWriter.h" />
-		<Unit filename="CBawFile.h" />
 		<Unit filename="CBillboardSceneNode.cpp" />
 		<Unit filename="CBillboardSceneNode.h" />
 		<Unit filename="CBlit.h" />
