Fixed bug in BAW file format stemming from different packings of the SMaterial struct across compilers (GCC bug this time relating to packing variables into bitfields). Added animation transformation functions, together with upsampling and downsampling (adding and removing keyframes).
Swapped the map<> and set<> in BAW loader/writer and other places with the unordered_* variants from c++11.

--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -243,6 +243,7 @@
 			<Add option="-D_7ZIP_ST" />
 		</Compiler>
 		<Unit filename="../../include/CBAWFile.h" />
+		<Unit filename="../../include/CBlobsLoadingManager.h" />
 		<Unit filename="../../include/CFinalBoneHierarchy.h" />
 		<Unit filename="../../include/CImageData.h" />
 		<Unit filename="../../include/COpenGLStateManager.h" />
