De-diamonding of the IGPUBuffer and COpenGLBuffer inheriting Objects Fixed bug causing GCC to fail (again) loading .baw files created on MSVC due to a 'bug' in GCC which made packing affect bitfields (they aliased onto other stuff). ARB_multi_bind now supported Compute Shader memory barrier OpenGL function retrieval Added c++11 macros for final and Pure Interface classes.
Fixed server makefile.

--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -350,6 +350,8 @@
 		<Unit filename="../../include/heapsort.h" />
 		<Unit filename="../../include/irrAllocator.h" />
 		<Unit filename="../../include/irrArray.h" />
+		<Unit filename="../../include/irrBaseClasses.h" />
+		<Unit filename="../../include/irrMacros.h" />
 		<Unit filename="../../include/irrMath.h" />
 		<Unit filename="../../include/irrString.h" />
 		<Unit filename="../../include/irrTypes.h" />
@@ -384,6 +386,7 @@
 		<Unit filename="CBAWMeshFileLoader.h" />
 		<Unit filename="CBAWMeshWriter.cpp" />
 		<Unit filename="CBAWMeshWriter.h" />
+		<Unit filename="CBAWFile.h" />
 		<Unit filename="CBillboardSceneNode.cpp" />
 		<Unit filename="CBillboardSceneNode.h" />
 		<Unit filename="CBlit.h" />
